--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="">
-  <link rel="stylesheet" href="style about.css">
+  <link rel="stylesheet" href="style_about.css">
   <title>Document</title>
 </head>
 
